# minion

./: .gitignore  Dockerfile  LICENSE  README.md  changelog.md  chat_minion.sh  docker-compose.yaml  entrypoint.sh  evolve.sh  minion.py  prepare_chat_session.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-build-amd64.yml  docker-build-arm64.yml
tests/: conftest.py  test_abbr.py  test_approval_env.py  test_autocompress.py  test_compact_alias.py  test_context_window.py  test_initial_context.py  test_interrupt_watcher_singleton.py  test_reset_clear_alias.py  test_sessions.py  test_sources.py
