[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minion"
version = "0.1.1"
description = "Minimal self evolving agent using Sentdex minion as base."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "openai",
    "httpx<0.28",
]

[project.scripts]
minion = "minion:main"

[tool.setuptools]
py-modules = ["minion"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "tools: tests for tool implementations (mkdir, read_file, etc.)",
    "commands: tests for slash commands (/compact, /compress, /reset, etc.)",
    "sources: tests for source resolution, context windows, etc.",
    "integration: end-to-end integration tests",
    "network: tests that involve network calls or mocking",
    "unit: simple unit tests",
]
